force-app/main/default/objects/Contact/fields/dtmCodigoPostal__c.field-meta.xml
<CustomField>
    <fullName>dtmCodigoPostal__c</fullName>
    <description>DTT-240311-MVP1-TEL14
Campo para el código postal</description>
    <label>Código Postal</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>