force-app/main/default/objects/Contact/fields/dtmEstadoProvincia__c.field-meta.xml
<CustomField>
    <fullName>dtmEstadoProvincia__c</fullName>
    <description>DTT-240321-MVP1-TEL14
campo para el estado o provincia</description>
    <label>Estado o Provincia</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>dtmPais__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>dtmEstadoProvincia</valueSetName>
    </valueSet>
</CustomField>