force-app/main/default/objects/Contact/fields/dtmPais__c.field-meta.xml
<CustomField>
    <fullName>dtmPais__c</fullName>
    <description>DTT-240321-MVP1-TEL14
Campo para los valores de país</description>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>dtmPais</valueSetName>
    </valueSet>
</CustomField>