force-app/main/default/objects/Contact/fields/dtmPrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>dtmPrimaryContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacto Primario</label>
    <type>Checkbox</type>
</CustomField>