force-app/main/default/objects/Contact/recordTypes/dtmPartner.recordType-meta.xml
<RecordType>
    <fullName>dtmPartner</fullName>
    <active>true</active>
    <description>DTT-240312-MVP1-Tipo de registro para los contactos de los partners</description>
    <label>Partner</label>
</RecordType>